deploy-services/keycloak/deployment.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth-service
  labels:
    name: auth-service

---
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
  namespace: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          # 26.5.5 版是在撰寫文件當下最新的穩定版，版本號碼請自行調整
          image: quay.io/keycloak/keycloak:26.5.5
          command:
            # 如果是要開發測試使用，請改為 `start-dev`
            - "start"
          resources:
            # 目前這邊設定的值為官方推薦的最小值
            # 請依需求自行調整
            requests:
              memory: 1250Mi
              cpu: 3
            limits:
              memory: 1360Mi
              cpu: 7.5
          ports:
            - containerPort: 8080
              protocol: TCP
            # 除非 Cluster 內部也要走 HTTPS，否則 HTTPS 建議由 ingress 處理
            # - name: https
            #   containerPort: 8443
            - name: jgroups
              containerPort: 7800
            - name: jgroups-fd
              containerPort: 57800
          startupProbe:
            httpGet:
              path: /health/started
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 1
            failureThreshold: 600
          livenessProbe:
            httpGet:
              path: /health/live
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3
---
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: auth-service
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http

---
# discovery-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak-discovery
  namespace: auth-service
spec:
  selector:
    app: keycloak
  clusterIP: None
  type: ClusterIP
